VFS-3866 Added mapping of default space gid
